# organism-memory

./: .cursorignore  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yml  docker-compose.vllm-local.yml  organism_config.example.yaml  pyproject.toml  pytest.ini  requirements-analytics.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: cpu_only.yaml  eval_r_layer.yaml  mcp_server.yaml  single_gpu_qwen3.yaml
data/: README.md
docs/: architecture.md  claude-code-proxy.md  mcp.md  setup.md  testing-with-real-model.md
examples/: mcp_demo.py  memory_demo.py
monitoring/: docker-compose.yml
monitoring/prometheus/: prometheus.yml
organism/: __init__.py  cli.py  config.py  mcp_server.py
organism/api/: server.py
organism/backbone/: __init__.py  attention_trace.py  base.py  config.py  custom_attention.py  llama31_backend.py  llama_cpp_backend.py  llama_cpp_worker.py  openai_backend.py  qwen25_backend.py  qwen35_backend.py  qwen3_backend.py  qwen3_vl_backend.py
organism/core/: __init__.py  exceptions.py  organism.py
organism/eval/: README.md  cli.py
organism/proxy/: __main__.py  anthropic_converter.py  anthropic_router.py  api_key_store.py  auth.py  cli.py  config.py  forwarder.py  memory_injector.py  router.py  server.py
organism/shared/: protocols.py
organism/utils/: text.py
scripts/: README_BENCHMARKING.md
scripts/bench/: bench_profile.py  compare_runs.py  locomo.py  longmemeval.py  test_locomo_scoring.py
tests/: README_TESTING.md  conftest.py
tests/helpers/: __init__.py  (+2 more)
(+131 files in other folders)
