[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "organism"
version = "0.1.0"
description = "Persistent memory layer for LLM assistants"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]",
    "pydantic>=2.0.0",
    "pyyaml",
    "slowapi>=0.1.9",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
organism-server = "organism.cli:serve"
organism-mcp    = "organism.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["organism*"]
exclude = ["tests*", "scripts*", "docs*"]
